examples/valid/12_compare_and_equal_operators.lane
module Examples.Valid12

import Basic.Io.{Io, Write}

import Basic.Ops.*

pub fn compare_ints(a : Int, b : Int) -> Bool {
  if a < b {
    a != b
  } else {
    a == b || a > b
  }
}

pub fn answer() -> Unit ! Io {
  if compare_ints(1, 2) && compare_ints(2, 1) {
    Write::println!("compare=true")
  } else {
    Write::println!("bad:compare=true")
  }
}
