examples/invalid/25_else_if_missing_final_else.lane
// invalid: else-if chains are still if expressions and require a final else
module Examples.Invalid.ElseIfMissingFinalElse

pub fn choose(first : Bool, second : Bool) -> Int {
  if first {
    1
  } else if second {
    2
  }
}
